Bug fix: the split pane's resize handle doesn't overlap dialog boxes.

--- a/src/main/resources/web/style/jquery-ui-overrides.css
+++ b/src/main/resources/web/style/jquery-ui-overrides.css
@@ -23,4 +23,5 @@
 
 .ui-resizable-handle {
     background: #ccc;
+    z-index: 999;
 }
